fix header width on mobile

--- a/layouts/partials/css/main.css
+++ b/layouts/partials/css/main.css
@@ -453,6 +453,7 @@ div.header {
 }
 div.header-home {
   padding-top: 36px;
+  max-width: 80%;
 }
 div.main {
   padding-top: 32px;
